# pdpd

./: .editorconfig  .pre-commit-config.yaml  Pipfile  README.md  main.py  pyproject.toml  qrcode.py
.github/workflows/: aws.yml
apis/events_list/: cache_util.py  lambda_handler.py
apis/slack_invite/: lambda_handler.py
frontend/: .env.local  .env.production  package.json  tailwind.config.js
frontend/src/components/: Code.vue  Conduct.vue  Header.vue  Slack.vue  Talks.vue
infrastructure/: pythonwa.py
infrastructure/lambda_layers/: .gitignore  README.md  build.sh
infrastructure/lambda_layers/default_layer/: pyproject.toml
infrastructure/lambda_layers/markdown/: pyproject.toml
infrastructure/lambda_layers/markdown_layer/: pyproject.toml
infrastructure/lambda_layers/requests_pydantic/: pyproject.toml
infrastructure/stacks/: serverless_backend_stack.py  static_site.py
