[project]
name = "pythonwa-default-layer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "pydantic~=2.10.6",
  "requests~=2.32.3",
  "aws-lambda-typing~=2.20.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
