[tool.poetry]
name = "requests-pydantic-layer"
version = "0.1.0"
description = ""
authors = ["Ben Fitzhardinge <ben@fitzhardinge.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
